--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "author": "Treehacks",
   "license": "MIT",
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"cd backend && go build && ./main \"",
     "build": "react-scripts build",
