--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "proxy": "http://localhost:8000",
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"cd backend && go build && ./main \"",
+    "backend": "cd backend && go build && ./main",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
