--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.8",
+    "react-spring": "^8.0.27",
     "reactstrap": "7.1.0"
   },
   "devDependencies": {
