--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "minify-sass": "node-sass src/assets/scss/argon-dashboard-react.scss src/assets/css/argon-dashboard-react.min.css --output-style compressed",
     "map-sass": "node-sass src/assets/scss/argon-dashboard-react.scss src/assets/css/argon-dashboard-react.css --source-map true"
   },
+  "engines": {
+    "node": "10.16.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
