--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "minify-sass": "node-sass src/assets/scss/argon-dashboard-react.scss src/assets/css/argon-dashboard-react.min.css --output-style compressed",
     "map-sass": "node-sass src/assets/scss/argon-dashboard-react.scss src/assets/css/argon-dashboard-react.css --source-map true"
   },
+  "homepage": "/admin",
   "engines": {
     "node": "10.16.0"
   },
