--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,3 @@
-NODE_PATH=./src
-
-POSTGRES_USER=
-POSTGRES_PASS=
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DBNAME=
-
+DATABASE_URI=
 EVENTIVE_API_KEY=
-
 GIN_MODE=release
